--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -11,6 +11,21 @@
     flex-wrap: wrap;
 }
 
+.movie-details {
+    background: #302f2f;
+    height: 85%;
+    width: 98%;
+    border-radius: 10px;
+    overflow: auto;
+}
+
+.more-info {
+    background: #232324;
+    width: 98%;
+    height: 11.5%;
+    border-radius: 5px;
+}
+
 .movie-card {
     background: #272626;
     padding: 2px;
@@ -48,10 +63,69 @@
     pointer-events: all;
 }
 
+.dFlex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dFlexCol {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.dFlexColSpaced {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.dFlexWrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: wrap;
+}
+
+.dFlex-no-aic {
+    display: flex;
+    justify-content: center;
+}
+
+.fpoppins-1 {
+    font: 1em Poppins, Calibri;
+}
+.fpoppins-1-1 {
+    font: 1.1em Poppins, Calibri;
+}
+.fpoppins-1-2 {
+    font: 1.2em Poppins, Calibri;
+}
+.fpoppins-1-3 {
+    font: 1.3em Poppins, Calibri;
+}
+
+.card-img-show {
+    height: 445px;
+    width: 300px; 
+}
+
 @media screen and (max-width: 768px) {
     .movie-card {
         width: 45%;
-        height: 19% !important;
+        min-height: 15%;
+        height: auto !important;
+    }
+    .movie-card-show {
+        height: 90% !important;
+        width: 90%;
+    }
+    .card-img-show {
+        height: 80%;
+        width: 80%;
     }
 }
 
