--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -22,8 +22,29 @@
 .more-info {
     background: #232324;
     width: 98%;
-    height: 11.5%;
+    min-height: 11.5%;
     border-radius: 5px;
+    margin-bottom: 1px;
+}
+
+.open-btn {
+    width: 30px;
+    height: 30px;
+    border-radius: 4px;
+    transition: background 0.3s ease;
+}
+.open-btn:active {
+    background: rgb(49, 49, 49);
+    width: 30px;
+    height: 30px;
+    border-radius: 4px;
+}
+
+.content-design {
+    width: auto;
+    height: 75%;
+    border: none;
+    border-right: 1.5px solid #1e1e1e;
 }
 
 .movie-card {
@@ -95,6 +116,12 @@
     justify-content: center;
 }
 
+.fpoppins-0-8 {
+    font: 0.8em Poppins, Calibri;
+}
+.fpoppins-0-9 {
+    font: 0.9em Poppins, Calibri;
+}
 .fpoppins-1 {
     font: 1em Poppins, Calibri;
 }
@@ -106,6 +133,37 @@
 }
 .fpoppins-1-3 {
     font: 1.3em Poppins, Calibri;
+}
+
+.fmont-0-8 {
+    font: 0.8em Montserrat, Calibri;
+}
+.fmont-0-9 {
+    font: 0.9em Montserrat, Calibri;
+}
+.fmont-1 {
+    font: 1em Montserrat, Calibri;
+}
+.fmont-1-1 {
+    font: 1.1em Montserrat, Calibri;
+}
+.fmont-1-2 {
+    font: 1.2em Montserrat, Calibri;
+}
+.fmont-1-3 {
+    font: 1.3em Montserrat, Calibri;
+}
+
+.torange {
+    color: #f78800;
+}
+
+.torange-light {
+    color: #ffa435;
+}
+
+.tgrey {
+    color: #737373;
 }
 
 .card-img-show {
