--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -50,6 +50,7 @@
 .movie-card {
     background: #272626;
     padding: 2px;
+    min-height: 20%;
     width: 28.5%;
     margin: 8px;
     cursor: pointer;
@@ -72,7 +73,6 @@
     opacity: 0;
     pointer-events: none;
     text-align: center;
-    font: 1em Poppins, sans-serif;
     transition: opacity 0.3s ease;
     transition: bottom 0.4s ease;
 }
@@ -219,6 +219,9 @@
     }
     .b-notification, .delete-btn {
         height: 50% !important;
+    }
+    .empty-container {
+        width: 90% !important;
     }
 }
 
